Added primitive patterns demo